// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionHashView.vue > [type: account, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="From"
    readonly=""
    tabindex="-1"
    type="text"
    value="cnToWyQbAUWy...yLGKFBTRYbz8"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy From"
    type="action"
    uppercase="false"
  />
  <!--v-if-->
</div>
`;

exports[`TransactionHashView.vue > [type: account, env: Dev]: should be rendered correctly 2`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="To"
    readonly=""
    tabindex="-1"
    type="text"
    value="cnToWyQbAUWy...yLGKFBTRYbz8"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy To"
    type="action"
    uppercase="false"
  />
  <!--v-if-->
</div>
`;

exports[`TransactionHashView.vue > [type: account, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="From"
    readonly=""
    tabindex="-1"
    type="text"
    value="cnToWyQbAUWy...yLGKFBTRYbz8"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy From"
    type="action"
    uppercase="false"
  />
  <!--v-if-->
</div>
`;

exports[`TransactionHashView.vue > [type: account, env: Prod]: should be rendered correctly 2`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="To"
    readonly=""
    tabindex="-1"
    type="text"
    value="cnToWyQbAUWy...yLGKFBTRYbz8"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy To"
    type="action"
    uppercase="false"
  />
  <!--v-if-->
</div>
`;

exports[`TransactionHashView.vue > [type: block, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="Block Id"
    readonly=""
    tabindex="-1"
    type="text"
    value="0xB8c77482e4...52C74426C6D7"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy with-dropdown"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy Block Id"
    type="action"
    uppercase="false"
  />
  <s-dropdown-stub
    class="s-dropdown-menu"
    data-v-fd59eac4=""
  >
    
    <a
      class="transaction-link"
      data-v-fd59eac4=""
      href="https://polkadot.js.org/apps/?rpc=#/explorer/query/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
      rel="nofollow noopener"
      target="_blank"
    >
      <div
        class="s-dropdown-menu__item"
        data-v-fd59eac4=""
      >
        View in Polkadot
      </div>
    </a>
    
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue > [type: block, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="Block Id"
    readonly=""
    tabindex="-1"
    type="text"
    value="0xB8c77482e4...52C74426C6D7"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy with-dropdown"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy Block Id"
    type="action"
    uppercase="false"
  />
  <s-dropdown-stub
    class="s-dropdown-menu"
    data-v-fd59eac4=""
  >
    
    <a
      class="transaction-link"
      data-v-fd59eac4=""
      href="https://polkadot.js.org/apps/?rpc=#/explorer/query/0xB8c77482e45F1F4d123DeRwQ5F52C74426C6D7"
      rel="nofollow noopener"
      target="_blank"
    >
      <div
        class="s-dropdown-menu__item"
        data-v-fd59eac4=""
      >
        View in Polkadot
      </div>
    </a>
    
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue > [type: ethAccount, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="To"
    readonly=""
    tabindex="-1"
    type="text"
    value="0x6F984C337a...42cef462e3ff"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy with-dropdown"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy To"
    type="action"
    uppercase="false"
  />
  <s-dropdown-stub
    class="s-dropdown-menu"
    data-v-fd59eac4=""
  >
    <a
      class="transaction-link"
      data-v-fd59eac4=""
      href="https://sepolia.etherscan.io/address/0x6F984C337aD5b7C2084805042AE942cef462e3ff"
      rel="nofollow noopener"
      target="_blank"
    >
      <div
        class="s-dropdown-menu__item"
        data-v-fd59eac4=""
      >
        View in Etherscan
      </div>
    </a>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue > [type: ethAccount, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="To"
    readonly=""
    tabindex="-1"
    type="text"
    value="0x6F984C337a...42cef462e3ff"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy with-dropdown"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy To"
    type="action"
    uppercase="false"
  />
  <s-dropdown-stub
    class="s-dropdown-menu"
    data-v-fd59eac4=""
  >
    <a
      class="transaction-link"
      data-v-fd59eac4=""
      href="https://sepolia.etherscan.io/address/0x6F984C337aD5b7C2084805042AE942cef462e3ff"
      rel="nofollow noopener"
      target="_blank"
    >
      <div
        class="s-dropdown-menu__item"
        data-v-fd59eac4=""
      >
        View in Etherscan
      </div>
    </a>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue > [type: ethTransaction, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="Transaction Id"
    readonly=""
    tabindex="-1"
    type="text"
    value="0x07f7ec4c5f...87b8674b2e80"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy with-dropdown"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy Transaction Id"
    type="action"
    uppercase="false"
  />
  <s-dropdown-stub
    class="s-dropdown-menu"
    data-v-fd59eac4=""
  >
    <a
      class="transaction-link"
      data-v-fd59eac4=""
      href="https://sepolia.etherscan.io/tx/0x07f7ec4c5f2638a2ad25dc77445fd01ee2f2ba51d14fe79cdfb187b8674b2e80"
      rel="nofollow noopener"
      target="_blank"
    >
      <div
        class="s-dropdown-menu__item"
        data-v-fd59eac4=""
      >
        View in Etherscan
      </div>
    </a>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue > [type: ethTransaction, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="Transaction Id"
    readonly=""
    tabindex="-1"
    type="text"
    value="0x07f7ec4c5f...87b8674b2e80"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy with-dropdown"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy Transaction Id"
    type="action"
    uppercase="false"
  />
  <s-dropdown-stub
    class="s-dropdown-menu"
    data-v-fd59eac4=""
  >
    <a
      class="transaction-link"
      data-v-fd59eac4=""
      href="https://sepolia.etherscan.io/tx/0x07f7ec4c5f2638a2ad25dc77445fd01ee2f2ba51d14fe79cdfb187b8674b2e80"
      rel="nofollow noopener"
      target="_blank"
    >
      <div
        class="s-dropdown-menu__item"
        data-v-fd59eac4=""
      >
        View in Etherscan
      </div>
    </a>
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue > [type: id, env: Dev]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="Transaction Id"
    readonly=""
    tabindex="-1"
    type="text"
    value="0xB8c77482e4...52C74426C6D7"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy Transaction Id"
    type="action"
    uppercase="false"
  />
  <!--v-if-->
</div>
`;

exports[`TransactionHashView.vue > [type: id, env: Dev]: should be rendered correctly 2`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="Transaction Id"
    readonly=""
    tabindex="-1"
    type="text"
    value="0xB8c77482e4...52C74426C6D7"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy with-dropdown"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy Transaction Id"
    type="action"
    uppercase="false"
  />
  <s-dropdown-stub
    class="s-dropdown-menu"
    data-v-fd59eac4=""
  >
    
    <a
      class="transaction-link"
      data-v-fd59eac4=""
      href="https://polkadot.js.org/apps/?rpc=#/explorer/query/0xB9c77482e45F1F4d123DeRwQ5F52C74426C6D7"
      rel="nofollow noopener"
      target="_blank"
    >
      <div
        class="s-dropdown-menu__item"
        data-v-fd59eac4=""
      >
        View in Polkadot
      </div>
    </a>
    
  </s-dropdown-stub>
</div>
`;

exports[`TransactionHashView.vue > [type: id, env: Prod]: should be rendered correctly 1`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="Transaction Id"
    readonly=""
    tabindex="-1"
    type="text"
    value="0xB8c77482e4...52C74426C6D7"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy Transaction Id"
    type="action"
    uppercase="false"
  />
  <!--v-if-->
</div>
`;

exports[`TransactionHashView.vue > [type: id, env: Prod]: should be rendered correctly 2`] = `
<div
  class="s-input-container"
  data-v-fd59eac4=""
>
  <s-input-stub
    class="s-input-stub"
    data-v-fd59eac4=""
    disabled="false"
    placeholder="Transaction Id"
    readonly=""
    tabindex="-1"
    type="text"
    value="0xB8c77482e4...52C74426C6D7"
  />
  <s-button-stub
    alternative=""
    class="s-button--copy with-dropdown"
    data-v-fd59eac4=""
    disabled="false"
    icon="basic-copy-24"
    iconposition="left"
    loading="false"
    nativetype="button"
    rounded="false"
    size="md"
    tooltip="Copy Transaction Id"
    type="action"
    uppercase="false"
  />
  <s-dropdown-stub
    class="s-dropdown-menu"
    data-v-fd59eac4=""
  >
    
    <a
      class="transaction-link"
      data-v-fd59eac4=""
      href="https://polkadot.js.org/apps/?rpc=#/explorer/query/0xB9c77482e45F1F4d123DeRwQ5F52C74426C6D7"
      rel="nofollow noopener"
      target="_blank"
    >
      <div
        class="s-dropdown-menu__item"
        data-v-fd59eac4=""
      >
        View in Polkadot
      </div>
    </a>
    
  </s-dropdown-stub>
</div>
`;
